src/css/app.scss
@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwind variants;

@import "./components/_fonts";
@import "./components/_navbar";
@import "./components/_monaco";
@import "./components/_search";
@import "./components/_highlightjs";

html,
body {
    scroll-behavior: smooth;
    scrollbar-gutter: stable both-edges;
    scroll-padding-top: 15vh;
}

html {
    accent-color: theme("colors.blue.500");
}

html.dark {
    color-scheme: dark light;
    accent-color: theme("colors.blue.400");
}

body {
    @apply bg-white text-black;
    @apply dark:bg-black dark:text-label;
    @apply font-manrope;
    font-size: 1rem;
    line-height: 1.5;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    .icon {
        visibility: hidden;
        @apply text-3xl;
        line-height: 1;
    }

    a {
        @apply p-2;
    }

    &:hover .icon {
        visibility: visible;
        border-bottom-color: transparent;
    }

    a:is(:hover, :focus) {
        visibility: visible;
        border-bottom-color: transparent;
    }
}

.no-overflow-x {
    overflow-x: hidden;
}

.icon {
    -webkit-font-feature-settings: "liga" off, "dlig";
    -moz-font-feature-settings: "liga=0, dlig=1";
    font-feature-settings: "liga", "dlig";
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
    font-family: "Material Icons Round", "Material Icons";
    vertical-align: middle;
    letter-spacing: normal;
    display: inline-block;
    text-decoration: none;
    text-transform: none;
    white-space: nowrap;
    font-weight: normal;
    position: relative;
    font-style: normal;
    word-wrap: normal;
    font-size: 24px;
    line-height: 1;
    direction: ltr;
    height: 1em;
    width: 1em;
}

a {
    @apply text-blue-500 hover:text-blue-700 no-underline;
    @apply dark:text-blue-400 dark:hover:text-blue-200;
}

textarea,
form,
input,
button,
select,
details,
summary,
a {
    &,
    &:focus,
    &:hover,
    &:active {
        -webkit-tap-highlight-color: transparent;
    }
}

button,
a {
    transition: box-shadow 0.2s ease-out;
    @apply focus-visible:ring-4 focus-visible:ring-blue-500 focus-visible:ring-opacity-50;
    @apply rounded-md focus:outline-none;
}

@screen sm {
    .desktop {
        display: block;
    }

    .mobile {
        display: none;
    }
}

@screen lt-sm {
    .mobile {
        display: block;
    }

    .desktop {
        display: none;
    }
}

main {
    .container {
        @apply px-5 py-2 sm:max-w-screen-md;

        word-wrap: break-word;

        @supports (padding-top: env(safe-area-inset-top, 0)) {
            padding-right: calc(
                theme("spacing.5") + env(safe-area-inset-right)
            );
            padding-left: calc(theme("spacing.5") + env(safe-area-inset-left));
        }
    }

    strong {
        @apply font-extrabold dark:font-medium dark:underline;
    }

    header {
        @apply p-6 text-center;

        h1 {
            @apply text-5xl font-bold mb-2;
        }

        p {
            @apply text-lg font-medium;
        }
    }

    #about,
    #faq {
        @apply px-5 pt-24;

        h4 {
            @apply pt-12;
        }

        h4:first-of-type {
            @apply pt-4;
        }

        p {
            @apply text-lg;
        }

        img {
            display: inline-block;
        }
    }

    h2 {
        @apply text-5xl font-bold mb-8;
    }

    h2#usage {
        @apply text-4xl font-bold my-8;
    }

    h4 {
        @apply text-2xl font-bold mb-2;
    }
}

#product-hunt {
    @apply flex mb-6;

    a,
    a:focus-visible {
        @apply rounded-xl;
    }

    figure {
        position: relative;
        width: 250px;
        height: 54px;
        overflow: hidden;
    }

    img {
        width: 100%;
        height: 100%;
    }
}

html:not(.dark) #product-hunt img:not(.dark),
html.dark #product-hunt img.dark {
    @apply block;
}

html:not(.dark) #product-hunt img.dark,
html.dark #product-hunt img:not(.dark) {
    @apply hidden;
}

html.dark hr {
    border-top-color: theme("colors.quaternary");
}

footer.footer {
    @apply text-gray-600 text-left dark:text-secondary;

    .container {
        @apply p-5 align-middle sm:max-w-screen-md;
    }
}

#copy-input {
    position: absolute;
    top: -50px;
    left: -50px;
    opacity: 0;
    // width: 1px;
    // visibility: hidden;
}

.navbar-toggle,
.theme-toggle,
.intall-btn,
.btn-icon {
    @apply rounded-md;
    @apply mr-1 w-10 h-10 text-blue-500 bg-gray-100 hover:bg-gray-200;
    @apply dark:text-blue-400 dark:bg-quaternary;
    @apply dark:hover:bg-gray-800;
    @apply active:bg-blue-200  dark:active:bg-gray-700;
    @apply focus-visible:border-blue-600 focus-visible:ring-4 focus:rounded-md;
}

.btn-icon {
    @apply bg-white hover:bg-gray-100;
    @apply dark:text-blue-400 dark:bg-tertiary;
    @apply dark:hover:bg-gray-800;
    @apply focus-visible:border-blue-600 focus-visible:ring-4 focus:rounded-md;
}

.btn-highlight {
    @apply rounded-md mr-1 inline-block;
    @apply text-blue-500 bg-gray-100 hover:bg-gray-200;
    @apply dark:text-blue-400 dark:bg-quaternary;
    @apply dark:hover:bg-gray-800;
    @apply focus-visible:border-blue-600 focus-visible:ring-4 focus:rounded-md;
}

.btn {
    @apply px-3 py-2 rounded-md no-underline hover:bg-gray-200;
    @apply text-blue-600 dark:text-blue-400 dark:hover:bg-quaternary;

    &.active {
        @apply bg-blue-700 text-white hover:bg-blue-500;
        @apply dark:bg-blue-400 dark:text-black dark:hover:bg-blue-500;
    }

    &:hover {
        @apply bg-opacity-60;
    }
}

.btn, button, #product-hunt a {
    transition: opacity ease 0.25s, transform ease-in-out 0.125s, box-shadow ease 0.25s;
    @apply transform scale-100;
    @apply active:bg-blue-200 dark:active:bg-gray-700;

    &:active {
        @apply scale-[0.8];
    }
}

.btn-share {
    @apply rounded-md ml-2;
    @apply text-blue-500 bg-gray-100;
    @apply dark:text-blue-400 dark:bg-quaternary;
    @apply dark:hover:bg-gray-800;
    @apply focus-visible:border-blue-600 focus-visible:ring-4 focus:rounded-md;
    min-width: 9ch;
}

.opacity-0 {
    opacity: 0;
}

.prompt-container {
    @apply w-full h-full z-10 flex items-end justify-end;
    @apply fixed top-0 left-0 pointer-events-none;
    @apply px-2 sm:px-6 py-4 z-20;

    .horz {
        @apply w-full relative;
        max-width: theme("spacing.96");
    }
}

.info-prompt {
    @apply flex items-center w-full;
    @apply p-2 bg-gray-200 dark:bg-gray-900 rounded-lg;
    @apply pointer-events-auto;
    @apply absolute bottom-0 right-0;
    visibility: hidden;
    transform: translateY(200px);

    @supports (backdrop-filter: blur(5px)) {
        @apply bg-opacity-70 dark:bg-opacity-80;
        @apply backdrop-filter backdrop-blur;
    }

    &.reload {
        @apply flex-col p-1;

        p {
            @apply pt-3 pb-5;
        }
    }

    p {
        @apply px-3;
    }

    .btn {
        @apply hover:bg-gray-100 hover:bg-opacity-90 dark:hover:bg-gray-600 dark:hover:bg-opacity-50;
    }
}

.btn,
.navbar-toggle,
.theme-toggle {
    @apply mr-1;
}

.theme-toggle {
    @apply rounded-md;
    @apply w-10 h-10 text-blue-500 bg-gray-100 hover:bg-gray-200;
    @apply dark:text-blue-400 dark:bg-quaternary;
    @apply dark:hover:bg-gray-800 dark:active:bg-gray-700;
    @apply focus-visible:border-blue-600 focus-visible:ring-4 focus:rounded-md;
}

.theme-options {
    @apply px-2 py-2 rounded-md ml-2;
    // color-scheme: light;
}
details {
  .content {
    padding-left: 2ch;
    @apply py-4;
  }
  summary::marker {
    content: "";
  }
  summary {
      --text-shadow-color: transparent;
    @apply relative cursor-pointer font-light;
    // letter-spacing: .1em;
    padding-left: 2ch;
    transition: text-shadow ease 0.4s;
    text-shadow: 0 0 .6px var(--text-shadow-color), 
                 0 0 .6px var(--text-shadow-color), 
                 0 0 .6px var(--text-shadow-color);
    &:active {
        --text-shadow-color: currentColor;
    }

    &:before {
        font-family: 'Material Icons Round';
        font-size: 24px;
        font-weight: normal;
        font-style: normal;
        line-height: 1;
        letter-spacing: normal;
        text-transform: none;
        display: inline-block;
        white-space: nowrap;
        word-wrap: normal;
        direction: ltr;
        -webkit-font-smoothing: antialiased;
        text-shadow: none;

        content: "► ";
        content: "chevron_right";
        @apply absolute top-1/2;
        left: 0.25ch;
        @apply text-2xl text-gray-800/80 dark:text-gray-200/60;
        transform: translate(0, -50%);
    }
    &:active,
    &:active:before {
        @apply text-gray-800 dark:text-gray-100;
    }
  }
  
  summary:before {
      transition: transform 0.2s ease-in-out, color ease 0.2s;
      transform: translate(0, -50%) rotateZ(0deg);
  }

  &[open] > summary {
    --text-shadow-color: currentColor;

    &:active {
        --text-shadow-color: transparent;
    }

    &:before {
        @apply text-gray-600/60 dark:text-gray-400/60;
      // content: "▼ ";
      // content: "\f2a2";
      transform: translate(0, -50%) rotateZ(90deg);
    }

    &:active:before {
        @apply text-gray-800 dark:text-gray-100;
    }
  }
}

// html.dark .theme-options {
//     color-scheme: dark;
//     @apply bg-black;
// }

